output1/source/kubernetes-to-kubernetes-versionchanged-parameterized/kustomize/base/web-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        move2kube.service.expose: "true"
    creationTimestamp: null
    labels:
        io.move2kube.service: web
    name: web
spec:
    replicas: 2
    selector:
        matchLabels:
            io.move2kube.service: web
    strategy: {}
    template:
        metadata:
            annotations:
                move2kube.service.expose: "true"
            creationTimestamp: null
            labels:
                io.move2kube.service: web
            name: web
        spec:
            containers:
                - env:
                    - name: API_URL
                      value: http://api:1234/fib
                  image: quay.io/konveyor/fibonacci-web:latest
                  imagePullPolicy: Always
                  name: web
                  ports:
                    - containerPort: 80
                      protocol: TCP
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
